--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -51,7 +51,7 @@
                                                 & 													& Nomin			& $\perp$ \\ \cline{1-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
  \multirow{5}{*}{Intervention}                                                           
-						& \multirow{1}{*}{Market Manipulation} 						& NuBits* 			& 892 \\ \cline{2-4}
+						& \multirow{1}{*}{Market Manipulation} 						& NuBits			& 892 \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 						& \multirow{2}{*}{Money Supply Adjustments}  				& Ampleforth		& $\perp$  \\ \cline{3-4}
 						&   													& RSCoin 			& $\perp$  \\ \cline{2-4}
