Is bitcoin really un-tethered: notes and bib file update

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -187,6 +187,10 @@ Even if the market does not accept the psychology that a coin backed by \$1 USD 
 
 %Tether attacks.
 
+%There are discussions about whether Tether has an effect on Bitcoin's price~\cite{griffin2018bitcoin}. When there is a decrease in price, Tether is converted into Bitcoin and Bitcoin is sold for USD, when the prices increase. Then, that amount of USD is used to back Tether. 
+
+%It seems like the issuance of new Tether, probably unbacked at that time, inflates the BTC price and then this is used as an advantage to back the issued tokens by selling BTC.
+
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
 \subsection{Indirectly-Backed}
