--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -1,6 +1,10 @@
 % !TEX encoding = UTF-8 Unicode
 
-
+@article{griffin2018bitcoin,
+	title={Is bitcoin really un-tethered?},
+	author={Griffin, John M and Shams, Amin},
+	year={2018}
+}
 
 
 @misc{bitmex,
@@ -169,14 +173,14 @@
 	Title = {Black Swan},
 	Howpublished = {\url{ https://www.investopedia.com/terms/b/blackswan.asp	}},
     Year = {2008}}
-    
+
 @book{harris2003trading,
   title={Trading and exchanges: Market microstructure for practitioners},
   author={Harris, Larry},
   pages={410--419},
   year={2003},
   publisher={Oxford University Press, USA}
-  
+
 }
 
 @book {FHayek,
@@ -250,4 +254,3 @@ month = {},
 year = {},
 note = {(Accessed on 02/23/2019)}
 }
-
